fix for home vertical spacing on ie10+

--- a/wp-content/themes/sixgill/less/desktop_home.less
+++ b/wp-content/themes/sixgill/less/desktop_home.less
@@ -1,5 +1,6 @@
 /* Home desktop styles */
 
+
 .home {
 
 	&-learn-more-link {
@@ -14,6 +15,7 @@
 		min-height: 100vh !important;
 		height: auto !important;
 	}
+	_:-ms-lang(x), &-section { height:100vh !important; }
 
 	&-first-section {
 		justify-content: center;
